--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "shx": "^0.3.3",
         "vee-validate": "^3.4.11",
         "vue": "~2.6.12",
+        "vue-linkify": "^1.0.1",
         "vue-router": "^3.5.1",
         "vuex": "~3.6.2",
         "yup": "^0.32.9"
