--- a/package.json
+++ b/package.json
@@ -51,18 +51,23 @@
         "@babel/core": "^7.13.10",
         "@vue/cli-plugin-babel": "^4.5.11",
         "@vue/cli-plugin-e2e-nightwatch": "^4.5.11",
-        "@vue/cli-plugin-eslint": "^4.5.11",
+        "@vue/cli-plugin-eslint": "^5.0.0-beta.4",
         "@vue/cli-plugin-unit-jest": "^4.5.11",
         "@vue/cli-service": "^4.5.11",
+        "@vue/eslint-config-airbnb": "^5.3.0",
         "@vue/test-utils": "^1.1.3",
         "auto-changelog": "~2.2.1",
         "babel-eslint": "~10.1.0",
         "babel-jest": "~26.6.3",
         "chromedriver": "latest",
         "core-js": "^3.9.1",
-        "eslint": "^6.8.0",
-        "eslint-plugin-vue": "^6.2.2",
+        "eslint": "^7.0.0",
+        "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-prettier": "^3.4.1",
+        "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-vue": "^7.0.0",
         "npm-run-all": "~4.1.5",
+        "prettier": "^2.4.1",
         "sass": "^1.32.8",
         "sass-loader": "^10.1.1",
         "vue-template-compiler": "~2.6.12"
